--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 :root {
    --bg: #0f0c19;
    --primary: #2c223d;
-   --card-width: 80vw;
+   --card-width: min(80vw, 20rem);
    --card-blur: .7rem;
    --card-radius: .8rem;
    --card-border: .15rem solid #ffffff4d;
@@ -34,15 +34,13 @@ main {
    justify-content: center;
    align-items: center;
    position: relative;
-   padding: 3rem;
+   padding: max(10vw, 2rem);
 }
 
 h1 {
    text-align: center;
-   margin-inline: auto;
    margin-top: 2rem;
    background-image: var(--gradient-4);
-   -shadow: var(--card-shadow);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
@@ -50,14 +48,14 @@ h1 {
 
 .card-wrapper {
    position: relative;
+   width: var(--card-width);
+   height: calc(var(--card-width)/16*9);
 }
 
 .card {
    position: relative;
-   width: var(--card-width);
-   height: calc(var(--card-width)/16*9);
-   max-width: 20rem;
-   max-height: calc(20rem/16*9);
+   width: 100%;
+   height: 100%;
    border-radius: var(--card-radius);
    border: var(--card-border);
    background-image: var(--card-gradient);
