--- a/css/index.css
+++ b/css/index.css
@@ -40,7 +40,7 @@ main {
 h1 {
    text-align: center;
    margin-top: 2rem;
-   max-width: calc((100%-max(10vw, 2rem))/2);
+   max-width: calc(100%-max(10vw, 2rem)*2);
    margin-inline: auto;
    background-image: var(--gradient-4);
    background-clip: text;
